--- a/index.html
+++ b/index.html
@@ -9,7 +9,34 @@
     <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
-    
+    <!-- HEADER START -->
+    <header class="site-header">
+        <div class="container">
+            <div class="site-header__wrapper">
+                <div class="site-header__start">
+                    <a class="site-header__logo" href="./index.html">
+                        <img class="site-header__logo-img" src="./images/myteam.svg" width="159" height="40" alt="MYTEAM">
+                    </a>
+
+                    <nav class="sitenav">
+                        <ul class="sitenav-list">
+                            <li class="sitenav-item">
+                                <a class="sitenav-link" href="./index.html">home</a>
+                            </li>
+                            <li class="sitenav-item">
+                                <a class="sitenav-link" href="#">about</a>
+                            </li>
+                        </ul>
+                    </nav>
+                </div>
+
+                <a class="site-header__btn" href="#" role="button">
+                    contact us
+                </a>
+            </div>
+        </div>
+    </header>
+    <!-- HEADER END -->
 
     <script src="./js/main.js"></script>
 </body>
