info section finished

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,6 +9,7 @@
     <link rel="stylesheet" href="./css/normalize.css">
     <link rel="stylesheet" href="./css/main.css">
 </head>
+
 <body>
     <!-- HEADER START -->
     <header class="site-header">
@@ -15,7 +17,8 @@
             <div class="site-header__wrapper">
                 <div class="site-header__start">
                     <a class="site-header__logo" href="./index.html">
-                        <img class="site-header__logo-img" src="./images/myteam.svg" width="159" height="40" alt="MYTEAM">
+                        <img class="site-header__logo-img" src="./images/myteam.svg" width="159" height="40"
+                            alt="MYTEAM">
                     </a>
 
                     <nav class="sitenav">
@@ -37,7 +40,52 @@
         </div>
     </header>
     <!-- HEADER END -->
-
+    <!-- MAIN  START-->
+    <main class="site-main">
+        
+        <!--INFO START-->
+        <section class="site-info">
+            <div class="container">
+                <div class="site-info__wrapper">
+                    <div class="site-info__start">
+                        <hr class="site-info__start--hr">
+                        <h2 class="site-info__start--title">
+                            Build & manage distributed teams like no one else.
+                        </h2>
+                    </div>
+                    <div class="site-info__end">
+                        <h3 class="visually-hidden">site-info</h3>
+                        <h4 class="visually-hidden"> site-info </h4>
+                        <ul class="site-info__end--list">
+                            <li class="site-info__end--item">
+                                <h5 class="site-info__end--heading">Experienced Individuals</h5>
+                                <p class="site-info__end--subtitle">
+                                    Our network is made up of highly experienced professionals who are passionate about
+                                    what they do.
+                                </p>
+                            </li>
+                            <li class="site-info__end--item">
+                                <h5 class="site-info__end--heading">Easy to Implement</h5>
+                                <p class="site-info__end--subtitle">
+                                    Our network is made up of highly experienced professionals who are passionate about
+                                    what they do.
+                                </p>
+                            </li>
+                            <li class="site-info__end--item">
+                                <h5 class="site-info__end--heading">Enhanced Productivity</h5>
+                                <p class="site-info__end--subtitle">
+                                    Our network is made up of highly experienced professionals who are passionate about
+                                    what they do.
+                                </p>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
+    <!--INFO END-->
     <script src="./js/main.js"></script>
 </body>
+
 </html>
