--- a/index.html
+++ b/index.html
@@ -38,6 +38,20 @@
     </header>
     <!-- HEADER END -->
 
+      <!-- READY SECTION START -->
+      <section class="ready-section">
+        <div class="container">
+          <div class="ready-section__wrapper">
+            <h2 class="ready-section__title">Ready to get started?</h2>
+            <button class="ready-section__btn">
+              contact us
+            </button>
+          </div>
+
+        </div>
+      </section>
+      <!-- READY SECTION END -->
+
     <script src="./js/main.js"></script>
 </body>
 </html>
