Hero section finished

--- a/index.html
+++ b/index.html
@@ -37,6 +37,32 @@
         </div>
     </header>
     <!-- HEADER END -->
+    
+    <!-- MAIN START-->
+<main class="site-main">
+    <!--    HERO SECTION START-->
+    <section class="hero-section">
+        <div class="container">
+            <div class="hero-section__wrapper">
+                <h1 class="hero-section__title">
+                    Find the best <span style="color:#F67E7E;">talent</span>
+                </h1>
+                <div class="hero-section__end">
+                    <div class="line"></div>
+
+                    <p class="hero-section__desc">
+                        Finding the right people and building high performing teams can be hard. Most companies aren’t
+                        tapping into the abundance of global talent. We’re about to change that.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!--    HERO SECTION END  -->
+</main>
+
+<!-- MAIN  END   -->
+
 
     <script src="./js/main.js"></script>
 </body>
