--- a/index.html
+++ b/index.html
@@ -115,6 +115,89 @@
         </div>
       </section>
       <!-- READY SECTION END -->
+        <!-- DELIVERING SECTION START -->
+        <section class="delivering">
+            <div class="container">
+                <div class="delivering__wrapper">
+                    <h2 class="delivering__wrapper__title">
+                        Delivering real results for top companies. Some of our
+                        <span class="delivering__wrapper__title-words">
+                            success stories.
+                        </span>
+                    </h2>
+                    <ul class="delivering__wrapper__list">
+                        <li class="delivering__wrapper__item">
+                            <p class="delivering__wrapper__item__desc">
+                                “The team perfectly fit the specialized skill
+                                set required. They focused on the most essential
+                                features helping us launch the platform eight
+                                months faster than planned.”
+                            </p>
+                            <a class="delivering__wrapper__item__link" href="#">
+                                Kady Baker
+                            </a>
+                            <i class="delivering__wrapper__item__job">
+                                Product Manager at Bookmark
+                            </i>
+                            <img class="delivering__wrapper__item__picture" src="./images/user-kady.png"
+                                srcset="./images/user-kady.png 1x,  ./images/user-kady@2x.png 2x" alt="Kady baker">
+                        </li>
+                        <li class="delivering__wrapper__item">
+                            <p class="delivering__wrapper__item__desc">
+                                “We needed to automate our entire onboarding process.
+                                The team came in and built out the whole journey. Since
+                                going live, user retention has gone through the roof!”
+                            </p>
+                            <a class="delivering__wrapper__item__link" href="#">
+                                Aiysha Reese
+                            </a>
+                            <i class="delivering__wrapper__item__job">
+                                Founder of Manage
+                            </i>
+                            <img class="delivering__wrapper__item__picture" src="./images/user-aiysha.png"
+                                srcset="./images/user-aiysha.png 1x,  ./images/user-aiysha@2x.png 2x"
+                                alt="Aiysha Reese">
+                        </li>
+                        <li class="delivering__wrapper__item">
+                            <p class="delivering__wrapper__item__desc">
+                                “Amazing. Our team helped us build an app that delivered
+                                a new experience for hiring a physio. The launch was an
+                                instant success with 100k downloads in the first month.”
+                            </p>
+                            <a class="delivering__wrapper__item__link" href="#">
+                                Arthur Clarke
+                            </a>
+                            <i class="delivering__wrapper__item__job">
+                                Co-founder of MyPhysio
+                            </i>
+                            <img class="delivering__wrapper__item__picture" src="./images/user-arthur.png"
+                                srcset="./images/user-arthur.png 1x,  ./images/user-arthur@2x.png 2x"
+                                alt="Arthur Clarke">
+                        </li>
+                    </ul>
+                    <div class="delivering__wrapper__imgs-top">
+                        <img class="delivering__wrapper__black-img" src="./images/black-img.png"
+                            srcset="./images/black-img.png 1x,  ./images/black-img@2x.png 2x" alt="black-img" width="100"
+                            height="100">
+                        <img class="delivering__wrapper__lines-top" src="./images/lines.png"
+                            srcset="./images/lines.png 1x,  ./images/lines@2x.png 2x" alt="lines group" width="100"
+                            height="44">
+                    </div>
+                    <div class="delivering__wrapper__imgs-bottom">
+                        <img class="delivering__wrapper__lines-bottom" src="./images/lines.png"
+                            srcset="./images/lines.png 1x,  ./images/lines@2x.png 2x" alt="lines group" width="100"
+                            height="44">
+                        <img class="delivering__wrapper__disk" src="./images/teams-half-disk.png"
+                            srcset="./images/teams-half-disk.png 1x,  ./images/teams-half-disk@2x.png 2x"
+                            alt="teams-half-disk" width="200" height="200">
+                        <img class="delivering__wrapper__rectange-bottom" src="./images/Rectangle.png"
+                            srcset="./images/Rectangle.png 1x,   ./images/Rectangle@2x.png 2x" alt="Rectangle"
+                            width="100" height="100">
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- DELIVERING SECTION END -->
     </main> 
     <!-- MAIN  END   -->
     <!-- FOOTER START -->
