--- a/index.html
+++ b/index.html
@@ -103,18 +103,6 @@
             </div>
         </section>
         <!--INFO END-->
-        <!-- READY SECTION START -->
-      <section class="ready-section">
-        <div class="container">
-          <div class="ready-section__wrapper">
-            <h2 class="ready-section__title">Ready to get started?</h2>
-            <button class="ready-section__btn">
-              contact us
-            </button>
-          </div>
-        </div>
-      </section>
-      <!-- READY SECTION END -->
         <!-- DELIVERING SECTION START -->
         <section class="delivering">
             <div class="container">
@@ -199,7 +187,19 @@
         </section>
         <!-- DELIVERING SECTION END -->
     </main> 
-    <!-- MAIN  END   -->
+    <!-- MAIN STYLE END -->
+        <!-- READY SECTION START -->
+      <section class="ready-section">
+        <div class="container">
+          <div class="ready-section__wrapper">
+            <h2 class="ready-section__title">Ready to get started?</h2>
+            <button class="ready-section__btn">
+              contact us
+            </button>
+          </div>
+        </div>
+      </section>
+      <!-- READY SECTION END -->
     <!-- FOOTER START -->
     <footer class="site-footer">
         <div class="container">
